--- a/Workbook100/Views/Base.lproj/Main.storyboard
+++ b/Workbook100/Views/Base.lproj/Main.storyboard
@@ -387,12 +387,12 @@
                     <connections>
                         <outlet property="labelCollection" destination="PTH-Fk-S6S" id="v4p-wE-k2r"/>
                         <outlet property="labelDivision" destination="XGc-nV-8va" id="Jb7-cW-FSv"/>
-                        <outlet property="labelLoadList" destination="oZf-e7-7q9" id="KBp-Vh-8Y6"/>
                         <outlet property="labelProductCategory" destination="sex-a1-HPY" id="ztO-4Z-It4"/>
                         <outlet property="labelProductClass" destination="ish-kh-wi2" id="D02-5h-xLu"/>
                         <outlet property="labelProductDetails" destination="Kzd-6n-ZYe" id="kYl-xs-W75"/>
                         <outlet property="labelProductSubtype" destination="i27-ia-PH5" id="yYp-e9-KXN"/>
                         <outlet property="labelProductType" destination="Uki-AH-Q5n" id="0if-eB-ecS"/>
+                        <outlet property="labelSavedLists" destination="oZf-e7-7q9" id="KBp-Vh-8Y6"/>
                         <outlet property="segmentedEssential" destination="PkO-yG-Nkj" id="Op6-xk-yZ5"/>
                         <outlet property="segmentedNew" destination="jOD-aJ-LYL" id="QYQ-8x-s8q"/>
                         <segue destination="PI5-Hy-7ng" kind="presentation" identifier="didSelectFilter" id="6XB-bB-61l"/>
@@ -418,7 +418,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXZ-Xx-3cn">
-                                            <rect key="frame" x="20" y="12.333333333333334" width="310" height="19.333333333333329"/>
+                                            <rect key="frame" x="20" y="12.000000000000002" width="310" height="19.666666666666671"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                             <nil key="highlightedColor"/>
                                         </label>
