--- a/Workbook100/Views/Base.lproj/Main.storyboard
+++ b/Workbook100/Views/Base.lproj/Main.storyboard
@@ -322,7 +322,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="321.33333333333331" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-TN-EA1">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-TN-EA1">
                                                     <rect key="frame" x="20" y="12.333333333333334" width="293.33333333333331" height="19.333333333333329"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                     <nil key="textColor"/>
@@ -1620,9 +1620,9 @@
                                 <action selector="addSection:" destination="a9c-Ls-B8G" id="vqd-Zh-w3d"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="+ Item" id="a3n-e3-rKy">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="a3n-e3-rKy">
                             <connections>
-                                <action selector="addItem:" destination="a9c-Ls-B8G" id="zQ1-KB-81q"/>
+                                <action selector="saveWorkbook:" destination="a9c-Ls-B8G" id="8BJ-dI-IQX"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
