--- a/Workbook100/Views/CollectionCell/CollectionCell.xib
+++ b/Workbook100/Views/CollectionCell/CollectionCell.xib
@@ -50,7 +50,7 @@
                                     <constraint firstAttribute="height" constant="20" id="wj3-lf-2sE"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSn-Ui-nm9" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSn-Ui-nm9" customClass="CollectionCellLabel" customModule="Workbook100" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="200" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="zsl-sc-2av"/>
