--- a/Workbook100/Views/Base.lproj/Main.storyboard
+++ b/Workbook100/Views/Base.lproj/Main.storyboard
@@ -319,10 +319,10 @@
                                         <rect key="frame" x="20" y="982.33333969116211" width="350" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Z4-hC-gHx" id="I41-LB-vpJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="321.33333333333331" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="333.33333333333331" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-TN-EA1">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYX-TN-EA1">
                                                     <rect key="frame" x="20" y="12.333333333333334" width="293.33333333333331" height="19.333333333333329"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                     <nil key="textColor"/>
@@ -1627,6 +1627,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addSectionButton" destination="cKE-Be-Qn5" id="SLF-UF-A8Y"/>
+                        <outlet property="saveButton" destination="a3n-e3-rKy" id="VFH-Fz-t1X"/>
                         <segue destination="u9q-iv-kJV" kind="presentation" identifier="showDetailsTVC2" id="MNd-68-2MZ"/>
                         <segue destination="rQv-vd-j81" kind="presentation" identifier="showProductList" id="YFz-OP-ir2"/>
                     </connections>
